--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block head %}
@@ -12,7 +11,7 @@
     <h1 style="text-align: center">Search</h1>
 
     <div class="form">
-        <form action="/review" method="POST">
+        <form action="/" method="POST">
             <input type="text" name="content" id="content">
             <input type="submit" value="Search">
         </form>
